# fastx-tools

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  grep.rs  lib.rs  main.rs  seq.rs  seq_needletail.rs  stats.rs
