[package]
authors = ["Wei Shen <shenwei356@gmail.com>"]
name = "fastx-tools"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "fastx-tools is a toolkit for FASTA/Q file manipulation, for learning purposes"
keywords = ["bioinformatics", "fasta", "fastq"]
categories = ["command-line-utilities", "science"]
homepage = "https://github.com/shenwei356/fastx-tools"
documentation = "https://github.com/shenwei356/fastx-tools"
repository = "https://github.com/shenwei356/fastx-tools"
readme = "README.md"


[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }

fastx = { path = "../fastx" }
needletail = "0.6.3"
